API atualizada & aplicação pronta

--- a/example/index.html
+++ b/example/index.html
@@ -7,9 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
-    <div id="counter">
-      Contador:
-    </div>
+    <div id="counter">Contador: 0</div>
+
+    <button id="increment">+</button>
+    <button id="decrement">-</button>
 
     <script src="example.js"></script>
   </body>
